--- a/database/index.html
+++ b/database/index.html
@@ -54,39 +54,46 @@
         firebase.initializeApp(config);
     </script>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
+
+    <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+
+
 </head>
 
 <body>
-    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
         <!-- Header section containing logo and menu -->
         <header class="header mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
 
 
             <!-- Navigation Bar -->
             <div class="filters">
-                
-                    <label>Police force
-                        <select id="police">
-                            <option disabled selected>Select one</option>
-                        </select>
-                    </label>
+
+                <label>Police force
+                    <select id="police">
+                        <option disabled selected>Select one</option>
+                    </select>
+                </label>
 
             </div>
         </header>
+<main>
+  <div id="mapid"></div>
 
-        <main class="mdl-layout__content mdl-color--grey-100">
+        <div>
 
             <!-- Show a list of recent posts -->
-            <section class="mdl-grid content" id="recent-posts-list">
-                <div class="posts-container mdl-cell mdl-cell--12-col mdl-grid">
+            <section class="accidents" id="recent-posts-list">
+                <div class="posts-container">
                 </div>
             </section>
 
-        </main>
-    </div>
+        </div>
+    </main>
+
 
     <script src="scripts/main.js"></script>
+    <script src="scripts/maps.js"></script>
 </body>
 
 </html>
