added detail to the roads display

--- a/database/index.html
+++ b/database/index.html
@@ -62,30 +62,35 @@
 </head>
 
 <body>
-        <!-- Header section containing logo and menu -->
-        <header class="header mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+    <!-- Header section containing logo and menu -->
+    <header class="header mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
 
 
-            <!-- Navigation Bar -->
-            <div class="filters">
+        <!-- Navigation Bar -->
+        <div class="filters">
 
-              <label>Police force
-                  <select id="police">
-                      <option disabled selected>Select one</option>
-                  </select>
-              </label>
+            <label>Police force
+                <select id="police">
+                    <option disabled selected>Select one</option>
+                </select>
+            </label>
 
-              <label>Severity
-                  <select id="severity">
-                      <option disabled selected>Select one</option>
-                  </select>
-              </label>
+            <label>Severity
+                <select id="severity">
+                    <option disabled selected>Select one</option>
+                </select>
+            </label>
+            <label>
+                1st_Road_Class
+                <select id="1st_Road_Class">
+                    <option disabled selected>Select one</option>
+                </select>
+            </label>
 
-
-            </div>
-        </header>
-<main>
-  <div id="mapid"></div>
+        </div>
+    </header>
+    <main>
+        <div id="mapid"></div>
 
         <div>
 
