markers are shown based on the bounds of the map now. remove broken filters

--- a/database/index.html
+++ b/database/index.html
@@ -67,7 +67,7 @@
 
 
         <!-- Navigation Bar -->
-        <div class="filters">
+        <!--div class="filters">
 
             <label>Police force
                 <select id="police">
@@ -87,7 +87,7 @@
                 </select>
             </label>
 
-        </div>
+        </div-->
     </header>
     <main>
         <div id="mapid"></div>
@@ -104,9 +104,9 @@
     </main>
 
 
+    <script src="scripts/maps.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/incidentElement.js"></script>
-    <script src="scripts/maps.js"></script>
 </body>
 
 </html>
