--- a/database/index.html
+++ b/database/index.html
@@ -39,6 +39,15 @@
     <meta name="msapplication-navbutton-color" content="#303F9F">
 
     <link rel="stylesheet" href="main.css">
+    <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+        <defs>
+            <symbol id="icon-compass2" viewBox="0 0 64 64">
+                <title>compass2</title>
+                <path class="path1" d="M32 0c-17.673 0-32 14.327-32 32s14.327 32 32 32 32-14.327 32-32-14.327-32-32-32zM6 32c0-14.359 11.641-26 26-26 6.848 0 13.077 2.649 17.721 6.977l-25.721 11.023-11.023 25.721c-4.328-4.644-6.977-10.873-6.977-17.721zM36.573 36.573l-16.005 6.859 6.859-16.005 9.146 9.146zM32 58c-6.848 0-13.077-2.649-17.721-6.977l25.721-11.023 11.023-25.721c4.328 4.644 6.977 10.872 6.977 17.721 0 14.359-11.641 26-26 26z"></path>
+            </symbol>
+        </defs>
+    </svg>
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
@@ -64,6 +73,7 @@
 <body>
 
     <main>
+        <h1>UK Traffic Accidents 2015</h1>
         <div id="mapid"></div>
 
         <form id="locationform">
@@ -85,7 +95,11 @@
 
         </div>
     </main>
-
+    <footer>
+        <svg class="icon icon-compass2">
+            <use xlink:href="#icon-compass2"></use>
+        </svg> Acknowledgements: Data is for the UK in 2015, from <a href="https://data.gov.uk/dataset/road-accidents-safety-data">data.gov.uk</a>. Map via <a href="http://leafletjs.com/">Leaflet</a> with <a href="https://www.mapbox.com/">Mapbox</a> tiles, data
+        served via <a href="https://www.firebase.com/">firebase</a>, geocoding (location search) via <a href="https://developers.google.com/maps/documentation/javascript/geocoding">Google</a>. Code by <a href="http://www.twitter.com/yoyehudi">Yo Yehudi</a></footer>
 
     <script src="scripts/maps.js"></script>
     <script src="scripts/httpclient.js"></script>
