--- a/database/index.html
+++ b/database/index.html
@@ -75,6 +75,7 @@
     <main>
         <h1>UK Traffic Accidents 2015</h1>
         <div id="mapid"></div>
+        <div id="loader">Loading...</div>
 
         <div class="supplementary">
             <div class="severitylegend"><h3>Legend</h3>
@@ -87,6 +88,7 @@
                     <input type="text" id="searchFor" />
                 <button>Search</button>
             </form>
+            <div id="status" class="inactive"></div>
         </div>
     </main>
     <footer>
