remove all the old firebase scaffolding and add favicon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Demonstrates the use of Google Cloud Database with a Firebase DB">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firebase Database Quickstart</title>
+    <title>UK 2015 Traffic accident visualisation</title>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
@@ -27,6 +27,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Firebase Database Quickstart">
     <meta name="theme-color" content="#303F9F">
+    <link rel="shortcut icon" href="/location2.png">
+<link rel="icon" href="/location2.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
