added placeholder for input and some styling

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <form id="locationform">
                 <label for="searchFor">Search for a location:</label>
-                    <input type="text" id="searchFor" />
+                    <input type="text" id="searchFor" placeholder="Stuck? Try Glasgow or Betws-y-coed"/>
                 <button>Search</button>
             </form>
             <div id="status" class="inactive"></div>
