--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h1>UK Traffic Accidents 2015</h1>
         <div id="mapid"></div>
         <div id="loader">Loading...</div>
-
+        <div id="status" class="inactive">Status: Currently showing Sheffield</div>
         <div class="supplementary">
             <div class="severitylegend"><h3>Legend</h3>
                 <div class="fatal legend">Fatal accident</div>
@@ -90,7 +90,6 @@
                     <input type="text" id="searchFor" placeholder="Stuck? Try Glasgow or Betws-y-coed"/>
                 <button>Search</button>
             </form>
-            <div id="status" class="inactive"></div>
         </div>
     </main>
     <footer>
