fixed mobile spreadsheet

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h1>UK Traffic Accidents 2015</h1>
         <div id="mapid"></div>
         <div id="loader">Loading...</div>
-        <div id="status" class="inactive">Status: Currently showing Sheffield</div>
+        <div id="status" class="inactive">Status: Currently showing 'Sheffield, UK'</div>
         <div class="supplementary">
             <div class="severitylegend"><h3>Legend</h3>
                 <div class="fatal legend">Fatal accident</div>
