added link to source code and instructions for feeding back about bugs. fixes #4

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </svg>
         <p>Acknowledgements: Data is for the UK in 2015, from <a href="https://data.gov.uk/dataset/road-accidents-safety-data">data.gov.uk</a>. Map via <a href="http://leafletjs.com/">Leaflet</a> with <a href="https://www.mapbox.com/">Mapbox</a> tiles, data
             served via <a href="https://www.firebase.com/">firebase</a>, geocoding (location search) via <a href="https://developers.google.com/maps/documentation/javascript/geocoding">Google</a>. SVG icons via <a href="https://icomoon.io">icomoon</a>.
-            Created by <a href="http://www.twitter.com/yoyehudi">Yo Yehudi</a></p>
+            Created by <a href="http://www.twitter.com/yoyehudi">Yo Yehudi</a>. Proudly <a href="https://github.com/yochannah/trafficuk">open source</a>. <strong>Feedback or found a bug?</strong> email <a href="mailto:yochannah@gmail.com">yochannah@gmail.com</a> or <a href="https://github.com/yochannah/trafficuk">make an issue on github</a></p>
     </footer>
 
     <script src="scripts/maps.js"></script>
